add task result files
